--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,8 +61,8 @@ jobs:
           name: "Development Release"
           body: |
            Release of success build for latest commit on `${{ github.head_ref || github.ref_name }}`.
-           <hr>
-           The build workflow run for this release goes here:
-           ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+
+           The build workflow run for this release goes in [#${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
           tag_name: "nightly"
+          prerelease: true
           files: "${{steps.build.outputs.build-output}}/*"
