Update build.yml for release action
add fail_on_unmatched_files for moments when build completely failed for every platform

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,4 +65,5 @@ jobs:
            The build workflow run for this release goes in [#${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
           tag_name: "nightly"
           prerelease: true
+          fail_on_unmatched_files: true
           files: "${{steps.build.outputs.build-output}}/*"
