--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,9 +10,11 @@ on:
       - '**'
 
 jobs:
+
   build:
     continue-on-error: true # continue even if build failed for some platform
     strategy:
+    
       fail-fast: false
       matrix:
         config:
@@ -22,48 +24,69 @@ jobs:
         - name: macOS
           os: macos-latest
 
-        - name: Android32
-          os: ubuntu-latest
-          target: Android32
-
         - name: Android64
           os: ubuntu-latest
           target: Android64
 
+        - name: Android32
+          os: ubuntu-latest
+          target: Android32
+          
     name: ${{ matrix.config.name }}
     runs-on: ${{ matrix.config.os }}
-
     steps:
       - uses: actions/checkout@v3
-
+      
       - name: Build the mod
         uses: geode-sdk/build-geode-mod@main
         with:
-          combine: true
           target: ${{ matrix.config.target }}
-      
-  package:
-    name: Package and release builds
+          combine: true
+          
+  upload:
+    name: Combine and upload builds
     runs-on: ubuntu-latest
     needs: ['build']
-
     steps:
-      - uses: geode-sdk/build-geode-mod/combine@main
+          
+      - name: "Combine builds"
+        uses: geode-sdk/build-geode-mod/combine@main
         id: build
-
-      - uses: actions/upload-artifact@v3
+        
+      - name: "Upload artifact"
+        uses: actions/upload-artifact@v4
         with:
           name: Build Output
           path: ${{ steps.build.outputs.build-output }}
+          
+      - name: "Set up Git repository"
+        uses: actions/checkout@v2
 
-      - uses: softprops/action-gh-release@v2
+      - name: "Development Release"
+        uses: ncipollo/release-action@v1
         with:
           name: "Development Release"
           body: |
            Release of success build for latest commit on `${{ github.head_ref || github.ref_name }}`.
 
            The build workflow run for this release goes in [#${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
-          tag_name: "nightly"
+          tag: "nightly"
           prerelease: true
-          fail_on_unmatched_files: true
-          files: "${{steps.build.outputs.build-output}}/*"
+          allowUpdates: true
+          artifactErrorsFailBuild: true
+          artifacts: "${{steps.build.outputs.build-output}}/*"
+        
+      - name: "Get mod properties"
+        id: json_properties
+        uses: ActionsTools/read-json-action@main
+        with:
+          file_path: "mod.json"
+        
+      - name: "Try Release Version"
+        uses: ncipollo/release-action@v1
+        with:
+          body: "${{ steps.changelog.outputs.changelog}}"
+          tag: "${{steps.json_properties.outputs.version}}"
+          artifacts: "${{steps.build.outputs.build-output}}/*"
+          artifactErrorsFailBuild: true
+          allowUpdates: false
